// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBox calls onChange when input changes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
        >
          <svg
            data-testid="search-box-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </div>
        <input
          class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
          placeholder="Search users..."
          type="text"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
      >
        <svg
          data-testid="search-box-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </div>
      <input
        class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
        placeholder="Search users..."
        type="text"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchBox calls onClear when clear button is clicked 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
        >
          <svg
            data-testid="search-box-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </div>
        <input
          class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
          placeholder="Search users..."
          type="text"
          value="alice"
        />
        <button
          aria-label="Clear search"
          class="SearchBox__ClearButton-sc-7yk9ly-3 cRyWTB"
        >
          <svg
            data-testid="circle-x-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
      >
        <svg
          data-testid="search-box-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </div>
      <input
        class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
        placeholder="Search users..."
        type="text"
        value="alice"
      />
      <button
        aria-label="Clear search"
        class="SearchBox__ClearButton-sc-7yk9ly-3 cRyWTB"
      >
        <svg
          data-testid="circle-x-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchBox does not show clear button when value is empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
        >
          <svg
            data-testid="search-box-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </div>
        <input
          class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
          placeholder="Search users..."
          type="text"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
      >
        <svg
          data-testid="search-box-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </div>
      <input
        class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
        placeholder="Search users..."
        type="text"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchBox renders input and search icon 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
        >
          <svg
            data-testid="search-box-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </div>
        <input
          class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
          placeholder="Search users..."
          type="text"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
      >
        <svg
          data-testid="search-box-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </div>
      <input
        class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
        placeholder="Search users..."
        type="text"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`SearchBox shows clear button when value is not empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
      >
        <div
          class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
        >
          <svg
            data-testid="search-box-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </div>
        <input
          class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
          placeholder="Search users..."
          type="text"
          value="alice"
        />
        <button
          aria-label="Clear search"
          class="SearchBox__ClearButton-sc-7yk9ly-3 cRyWTB"
        >
          <svg
            data-testid="circle-x-svg"
            fill="currentColor"
            height="16px"
            stroke="none"
            stroke-width="1"
            width="16px"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__SearchContainer-sc-7yk9ly-0 escqfF ckFvxY kdkliK"
    >
      <div
        class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 SearchBox__IconWrapper-sc-7yk9ly-2 escqfF ckFvxY dpzfPM"
      >
        <svg
          data-testid="search-box-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </div>
      <input
        class="SearchBox__Input-sc-7yk9ly-1 dhtbre"
        placeholder="Search users..."
        type="text"
        value="alice"
      />
      <button
        aria-label="Clear search"
        class="SearchBox__ClearButton-sc-7yk9ly-3 cRyWTB"
      >
        <svg
          data-testid="circle-x-svg"
          fill="currentColor"
          height="16px"
          stroke="none"
          stroke-width="1"
          width="16px"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
